# paperbot

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
paperbot/: __init__.py  config.py  pipeline.py
paperbot/bots/: arxivbot.py  ccbot.py  cvfbot.py  gformbot.py  openaccessbot.py  openreviewbot.py  seleniumbot.py  sitebot.py
paperbot/settings/: aaai.json  acl.json  acmmm.json  aistats.json  arr.json  colm.json  corl.json  cvpr.json  eccv.json  emnlp.json  googlescholar.json  iccv.json  iclr.json  icml.json  kdd.json  nips.json  siggraph.json  siggraphasia.json  top_venues.csv  uai.json  wacv.json  www.json
paperbot/utils/: __init__.py  assigner.py  compress_uncompress_array.py  merger.py  paperlist.py  summarizer.py  util.py
snippets/: get_arxiv_id.py  llama.py
tests/: test_glm.py  test_merger.py  test_paperlist.py  test_pdf.py  test_pipeline.py
