[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperbot"
version = "0.0.3"
authors = [
  { name="Jing Yang", email="jingyang.carl.work@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/papercopilot/paperbot"
Issues = "https://github.com/papercopilot/paperbot/issues"